add template form

--- a/src/app/book/book-list/book-list.component.html
+++ b/src/app/book/book-list/book-list.component.html
@@ -15,4 +15,6 @@
   </tbody>
 </table>
 
-<ngb-book [book]="selectedBook"></ngb-book>
+<ngb-book [book]="selectedBook" (createNewBook)="saveBook($event)">
+
+</ngb-book>
