--- a/src/app/book/book/book.component.html
+++ b/src/app/book/book/book.component.html
@@ -1,3 +1,13 @@
 <div>
   <p *ngIf="book">Selected: {{book.id}} - {{book.name}}</p>
 </div>
+
+
+<form *ngIf="book" #form="ngForm" (ngSubmit)="createBook(form)">
+  <label for="name">Name</label>
+  <input type="text" [(ngModel)]="book.name" name="name" required #name="ngModel">
+  <p *ngIf="name.errors?.required && (name.dirty || form.submitted) ">Das Feld ist ein Pflichtfeld</p>
+  <label for="isbn">ISBN</label>
+  <input type="text" [(ngModel)]="book.isbn" name="isbn">
+  <button type="submit">Speichern</button>
+</form>
