--- a/src/app/basic-layout/nav/nav.component.html
+++ b/src/app/basic-layout/nav/nav.component.html
@@ -5,7 +5,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="">Dashboard</a>
       <a mat-list-item routerLink="/books">Books</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/characters">Characters</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
